--- a/css/styles.css
+++ b/css/styles.css
@@ -939,6 +939,7 @@ body {
   gap: 15px;
   align-items: center;
   justify-content: flex-start;
+  margin-top: 1.5rem;
 }
 
 @media (max-width: 968px) {
